# rust_avoid

./: Cargo.toml
src/: main.rs
