[package]
name = "rust_avoidance"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = "0.15"
ndarray-rand = "0.15.0"
ndarray-npy = "0.9.1"
linfa = "0.6"
linfa-clustering = "0.6"
linfa-datasets = { version = "0.6", features = ["generate"] }
approx = "0.5"
rand_xoshiro = "0.6"
rplidar_drv_rs = "0.7.0"
serialport = "4.2.0"
